min height on about page to avoid overflow on mobile

--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@
 }
 .about-section {
   width: 100%;
-  height: 600px;
+  min-height: 600px;
   padding-top: 40px;
   display: flex;
   padding-bottom: 100px;
